--- a/Server.DataBindings/packages.config
+++ b/Server.DataBindings/packages.config
@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CAS.CodeProtect" version="5.0.2" targetFramework="net451" />
-  <package id="CAS.CommServer.CommonBus" version="5.01.02-Charlie" targetFramework="net461" />
-  <package id="CAS.CommServer.DA.Client" version="2.00.14-Foxtrot" targetFramework="net461" />
-  <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Delta" targetFramework="net461" />
-  <package id="CAS.CommServer.DAServerConfiguration" version="4.1.2-Delta" targetFramework="net461" />
-  <package id="CAS.CommServer.DeviceSimulator" version="5.01.02-Delta" targetFramework="net461" />
+  <package id="CAS.CodeProtect" version="6.0.0-Charlie" targetFramework="net461" />
+  <package id="CAS.CommServer.CommonBus" version="5.01.02-Echo" targetFramework="net461" />
+  <package id="CAS.CommServer.DA.Client" version="2.00.14-Golf" targetFramework="net461" />
+  <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Echo" targetFramework="net461" />
+  <package id="CAS.CommServer.DAServerConfiguration" version="4.1.2-Echo" targetFramework="net461" />
+  <package id="CAS.CommServer.DeviceSimulator" version="5.01.02-Echo" targetFramework="net461" />
   <package id="CAS.CommServer.OPCClassic.SDK.COMWrapper" version="2.01.1061-Bravo" targetFramework="net461" />
   <package id="CAS.CommServer.OPCClassic.SDK.Core" version="2.01.1061-Bravo" targetFramework="net461" />
-  <package id="CAS.CommServer.ProtocolHub.Communication" version="4.00.22-Charlie" targetFramework="net461" />
-  <package id="CAS.CommServer.ProtocolHub.ItemDescriber" version="1.00.2-Golf" targetFramework="net461" />
-  <package id="CAS.CommServer.UA.ConfigurationEditor.ServerConfiguration" version="3.20.1-India" targetFramework="net461" />
-  <package id="CAS.RealTime" version="5.0.2" targetFramework="net451" />
+  <package id="CAS.CommServer.ProtocolHub.Communication" version="4.00.22-Delta" targetFramework="net461" />
+  <package id="CAS.CommServer.ProtocolHub.ItemDescriber" version="1.00.2-Hotel" targetFramework="net461" />
+  <package id="CAS.CommServer.UA.ConfigurationEditor.ServerConfiguration" version="3.20.1-Juliet" targetFramework="net461" />
+  <package id="CAS.RealTime" version="5.0.4-Charlie" targetFramework="net461" />
   <package id="CAS.UA.Common" version="3.00.02-Delta" targetFramework="net461" />
   <package id="CAS.UA.IServerConfiguration" version="1.00.00" targetFramework="net35" />
-  <package id="CAS.Windows.Forms" version="5.0.6-Charlie" targetFramework="net451" />
+  <package id="CAS.Windows.Forms" version="6.0.0-Delta" targetFramework="net461" />
   <package id="OPC.UA.SDK.Core" version="1.01.326" targetFramework="net461" />
 </packages>
