--- a/Server.Library/packages.config
+++ b/Server.Library/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CAS.CodeProtect" version="5.0.2" targetFramework="net461" />
-  <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Delta" targetFramework="net461" />
-  <package id="CAS.CommServer.DAServerConfiguration" version="4.1.2-Delta" targetFramework="net461" />
+  <package id="CAS.CodeProtect" version="6.0.0-Charlie" targetFramework="net461" />
+  <package id="CAS.CommServer.DAClientConfiguration" version="5.01.02-Echo" targetFramework="net461" />
+  <package id="CAS.CommServer.DAServerConfiguration" version="4.1.2-Echo" targetFramework="net461" />
   <package id="CAS.CommServer.OPCClassic.SDK.Core" version="2.01.1061-Bravo" targetFramework="net461" />
-  <package id="CAS.CommServer.UA.ConfigurationEditor.ServerConfiguration" version="3.20.1-India" targetFramework="net461" />
-  <package id="CAS.RealTime" version="5.0.2" targetFramework="net461" />
+  <package id="CAS.CommServer.UA.ConfigurationEditor.ServerConfiguration" version="3.20.1-Juliet" targetFramework="net461" />
+  <package id="CAS.RealTime" version="5.0.4-Charlie" targetFramework="net461" />
   <package id="CAS.UA.Common" version="3.00.02-Delta" targetFramework="net461" />
   <package id="CAS.UA.IServerConfiguration" version="1.00.00" targetFramework="net461" />
-  <package id="CAS.Windows.Forms" version="5.0.6-Charlie" targetFramework="net461" />
+  <package id="CAS.Windows.Forms" version="6.0.0-Delta" targetFramework="net461" />
   <package id="OPC.UA.SDK.Core" version="1.01.326" targetFramework="net461" />
   <package id="Opc.Ua.Server" version="1.01.3262-Alpha" targetFramework="net461" />
 </packages>
